# protdata

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: test.yml
data/: combined_protein.tsv  download_data.sh  proteinGroups.txt  spectronaut_normal.tsv
docs/: Makefile
docs/source/: contributing.rst  index.rst  release_notes.rst
docs/source/api/: index.rst
docs/source/tutorials/: getting_started.rst  index.rst
protdata/io/: __init__.py  diann_loader.py  fragpipe_loader.py  maxquant_loader.py  mztab_loader.py  spectronaut_loader.py
tests/: test_loaders.py  test_maxquant_loader.py  test_spectronaut_loader.py
