[project]
name = "protdata"
version = "0.1.0"
description = "Proteomics data loaders for AnnData format."
authors = [
  { name = "Max Frank" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anndata",
  "pandas",
  "numpy",
  "pyteomics",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 
